--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public//icons/icon-192*192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/public/icons/icon-192*192.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/public/icons/icon-512*512.png" />
+    <link rel="manifest" href="/public/manifest.json" />
     <title>기로케</title>
   </head>
   <body>
