fix: style 적용 코드 위치 수정

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" sizes="192x192" href="/public/icons/icon-192*192.png" />
     <link rel="apple-touch-icon" sizes="512x512" href="/public/icons/icon-512*512.png" />
     <link rel="manifest" href="/public/manifest.json" />
+    <link rel="/src/styles/index.css" />
     <title>기로케</title>
   </head>
   <body>
